# chess

./: .gitignore  Makefile  callgrind.out.17090  callgrind.out.19782  callgrind.out.21228  rn.sh
src/: Bishop.cpp  Bishop.hpp  Board.cpp  Board.hpp  BoardState.cpp  BoardState.hpp  BoardStructure.cpp  BoardStructure.hpp  DrawablePiece.cpp  DrawablePiece.hpp  DrawableSquare.cpp  DrawableSquare.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Move.hpp  PawnPromotionDialog.hpp  Piece.cpp  Piece.hpp  PieceType.hpp  Position.cpp  Position.hpp  Rook.cpp  Rook.hpp  SelectedPieceInfo.hpp  Square.cpp  Square.hpp  ValidPosition.hpp  Window.cpp  Window.hpp  World.cpp  World.hpp  add_sets.cpp  add_sets.hpp  bounded.hpp  chess_exceptions.cpp  chess_exceptions.hpp  main.cpp  move_generation.cpp  (+6 more)
src/pieces/: Bishop.cpp  Bishop.cpp.orig  Bishop.hpp  Bishop.hpp.orig  King.cpp  King.cpp.orig  King.hpp  King.hpp.orig  Knight.cpp  Knight.cpp.orig  Knight.hpp  Knight.hpp.orig  Pawn.cpp  Pawn.hpp  Pawn.hpp.orig  PieceType.hpp  Queen.cpp  Queen.cpp.orig  Queen.hpp  Queen.hpp.orig  Rook.cpp  Rook.hpp  Rook.hpp.orig
test/: CMakeLists.txt  bishopTests.cpp  kingTests.cpp  knightTests.cpp  pawnTests.cpp  queenTests.cpp  rookTests.cpp  test.sh  unitTests.cpp
